--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,7 +8,7 @@ set(LIB_VERSION 1.5.1)
 string(REPLACE "." "," LIB_VERSION_NUM "${LIB_VERSION}.0")
 
 option(RECASTNAVIGATION_DEMO "Build demo" ON)
-option(RECASTNAVIGATION_TESTS "Build tests" ON)
+#option(RECASTNAVIGATION_TESTS "Build tests" ON)
 option(RECASTNAVIGATION_EXAMPLES "Build examples" ON)
 
 if(MSVC AND BUILD_SHARED_LIBS)
@@ -47,7 +47,7 @@ if (RECASTNAVIGATION_DEMO)
     add_subdirectory(RecastDemo)
 endif ()
 
-if (RECASTNAVIGATION_TESTS)
-    enable_testing()
-    add_subdirectory(Tests)
-endif ()
+#if (RECASTNAVIGATION_TESTS)
+#    enable_testing()
+#    add_subdirectory(Tests)
+#endif ()
