--- a/DebugUtils/CMakeLists.txt
+++ b/DebugUtils/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB SOURCES Source/*.cpp)
-add_library(DebugUtils ${SOURCES})
+
+if (RECASTNAVIGATION_STATIC)
+    add_library(DebugUtils STATIC ${SOURCES})
+else()
+    add_library(DebugUtils SHARED ${SOURCES})
+endif()
 
 add_library(RecastNavigation::DebugUtils ALIAS DebugUtils)
-set_target_properties(DebugUtils PROPERTIES DEBUG_POSTFIX -d)
 
 set(DebugUtils_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")
 
@@ -18,21 +22,14 @@ target_link_libraries(DebugUtils
 
 set_target_properties(DebugUtils PROPERTIES
         SOVERSION ${SOVERSION}
-        VERSION ${LIB_VERSION}
-        COMPILE_PDB_OUTPUT_DIRECTORY .
-        COMPILE_PDB_NAME "DebugUtils-d"
+        VERSION ${VERSION}
         )
 
 install(TARGETS DebugUtils
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
         COMPONENT library
         )
 
 file(GLOB INCLUDES Include/*.h)
-install(FILES ${INCLUDES} DESTINATION
-    ${CMAKE_INSTALL_INCLUDEDIR}/recastnavigation)
-if(MSVC)
-    install(FILES "$<TARGET_FILE_DIR:DebugUtils>/DebugUtils-d.pdb" CONFIGURATIONS "Debug" DESTINATION "lib")
-endif()
+install(FILES ${INCLUDES} DESTINATION include)
