--- a/Detour/CMakeLists.txt
+++ b/Detour/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB SOURCES Source/*.cpp)
-add_library(Detour ${SOURCES})
+
+if(RECASTNAVIGATION_STATIC)
+    add_library(Detour STATIC ${SOURCES})
+else()
+    add_library(Detour SHARED ${SOURCES})
+endif()
 
 add_library(RecastNavigation::Detour ALIAS Detour)
-set_target_properties(Detour PROPERTIES DEBUG_POSTFIX -d)
 
 set(Detour_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")
 
@@ -12,21 +16,14 @@ target_include_directories(Detour PUBLIC
 
 set_target_properties(Detour PROPERTIES
         SOVERSION ${SOVERSION}
-        VERSION ${LIB_VERSION}
-        COMPILE_PDB_OUTPUT_DIRECTORY .
-        COMPILE_PDB_NAME "Detour-d"
+        VERSION ${VERSION}
         )
 
 install(TARGETS Detour
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
         COMPONENT library
         )
 
 file(GLOB INCLUDES Include/*.h)
-install(FILES ${INCLUDES} DESTINATION
-    ${CMAKE_INSTALL_INCLUDEDIR}/recastnavigation)
-if(MSVC)
-    install(FILES "$<TARGET_FILE_DIR:Detour>/Detour-d.pdb" CONFIGURATIONS "Debug" DESTINATION "lib")
-endif()
+install(FILES ${INCLUDES} DESTINATION include)
