--- a/DetourCrowd/CMakeLists.txt
+++ b/DetourCrowd/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB SOURCES Source/*.cpp)
-add_library(DetourCrowd ${SOURCES})
+
+if (RECASTNAVIGATION_STATIC)
+    add_library(DetourCrowd STATIC ${SOURCES})
+else ()
+    add_library(DetourCrowd SHARED ${SOURCES})
+endif ()
 
 add_library(RecastNavigation::DetourCrowd ALIAS DetourCrowd)
-set_target_properties(DetourCrowd PROPERTIES DEBUG_POSTFIX -d)
 
 set(DetourCrowd_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")
 
@@ -16,21 +20,14 @@ target_link_libraries(DetourCrowd
 
 set_target_properties(DetourCrowd PROPERTIES
         SOVERSION ${SOVERSION}
-        VERSION ${LIB_VERSION}
-        COMPILE_PDB_OUTPUT_DIRECTORY .
-        COMPILE_PDB_NAME "DetourCrowd-d"
+        VERSION ${VERSION}
         )
 
 install(TARGETS DetourCrowd
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
         COMPONENT library
         )
 
 file(GLOB INCLUDES Include/*.h)
-install(FILES ${INCLUDES} DESTINATION
-    ${CMAKE_INSTALL_INCLUDEDIR}/recastnavigation)
-if(MSVC)
-    install(FILES "$<TARGET_FILE_DIR:DetourCrowd>/DetourCrowd-d.pdb" CONFIGURATIONS "Debug" DESTINATION "lib")
-endif()
+install(FILES ${INCLUDES} DESTINATION include)
