--- a/DetourTileCache/CMakeLists.txt
+++ b/DetourTileCache/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB SOURCES Source/*.cpp)
-add_library(DetourTileCache ${SOURCES})
+
+if (RECASTNAVIGATION_STATIC)
+    add_library(DetourTileCache STATIC ${SOURCES})
+else ()
+    add_library(DetourTileCache SHARED ${SOURCES})
+endif ()
 
 add_library(RecastNavigation::DetourTileCache ALIAS DetourTileCache)
-set_target_properties(DetourTileCache PROPERTIES DEBUG_POSTFIX -d)
 
 set(DetourTileCache_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")
 
@@ -16,22 +20,15 @@ target_link_libraries(DetourTileCache
 
 set_target_properties(DetourTileCache PROPERTIES
         SOVERSION ${SOVERSION}
-        VERSION ${LIB_VERSION}
-        COMPILE_PDB_OUTPUT_DIRECTORY .
-        COMPILE_PDB_NAME "DetourTileCache-d"
+        VERSION ${VERSION}
         )
 
 
 install(TARGETS DetourTileCache
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
         COMPONENT library
         )
 
 file(GLOB INCLUDES Include/*.h)
-install(FILES ${INCLUDES} DESTINATION
-    ${CMAKE_INSTALL_INCLUDEDIR}/recastnavigation)
-if(MSVC)
-    install(FILES "$<TARGET_FILE_DIR:DetourTileCache>/DetourTileCache-d.pdb" CONFIGURATIONS "Debug" DESTINATION "lib")
-endif()
+install(FILES ${INCLUDES} DESTINATION include)
