--- a/Recast/CMakeLists.txt
+++ b/Recast/CMakeLists.txt
@@ -1,8 +1,12 @@
 file(GLOB SOURCES Source/*.cpp)
-add_library(Recast ${SOURCES})
+
+if (RECASTNAVIGATION_STATIC)
+    add_library(Recast STATIC ${SOURCES})
+else ()
+    add_library(Recast SHARED ${SOURCES})
+endif ()
 
 add_library(RecastNavigation::Recast ALIAS Recast)
-set_target_properties(Recast PROPERTIES DEBUG_POSTFIX -d)
 
 set(Recast_INCLUDE_DIR "${CMAKE_CURRENT_SOURCE_DIR}/Include")
 
@@ -12,21 +16,14 @@ target_include_directories(Recast PUBLIC
 
 set_target_properties(Recast PROPERTIES
         SOVERSION ${SOVERSION}
-        VERSION ${LIB_VERSION}
-        COMPILE_PDB_OUTPUT_DIRECTORY .
-        COMPILE_PDB_NAME "Recast-d"
+        VERSION ${VERSION}
         )
 
 install(TARGETS Recast
-        RUNTIME DESTINATION ${CMAKE_INSTALL_BINDIR}
-        ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
-        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        ARCHIVE DESTINATION lib
+        LIBRARY DESTINATION lib
         COMPONENT library
         )
 
 file(GLOB INCLUDES Include/*.h)
-install(FILES ${INCLUDES} DESTINATION
-    ${CMAKE_INSTALL_INCLUDEDIR}/recastnavigation)
-if(MSVC)
-    install(FILES "$<TARGET_FILE_DIR:Recast>/Recast-d.pdb" CONFIGURATIONS "Debug" DESTINATION "lib")
-endif()
+install(FILES ${INCLUDES} DESTINATION include)
